<resources>
    <string name="app_name">WeatherMapApp</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>

    <string name="mapbox_access_token" translatable="false">MAPBOXAPIKEYHERE</string>
</resources>